--- a/ProyectoTD2022.Rmd
+++ b/ProyectoTD2022.Rmd
@@ -207,6 +207,51 @@ Sueca_61$Place = "Sueca 61"
 Sueca_Esq_Denia$Place = "Sueca esq Denia"
 Vivons_Chaflan_Cadiz$Place = "Vivons Chaflan"
 
+
+#Forzamos que los diferentes ficheros esten en un formato tidy
+
+Cadiz_3 = Cadiz_3[c(1,12,2:11)]
+Cadiz_3t = Cadiz_3 %>% gather(Ruido, Valor,8:length(Cadiz_3)-1)
+
+Cadiz_16 = Cadiz_16[c(1,12,2:11)]
+Cadiz_16t = Cadiz_16 %>% gather(Ruido, Valor,8:length(Cadiz_16)-1)
+
+Carles_Cervera_34 = Carles_Cervera_34[c(1,12,2:11)]
+Carles_Cervera_34t = Carles_Cervera_34 %>% gather(Ruido, Valor,8:length(Carles_Cervera_34)-1)
+
+Carles_Cervera_Chaflan_Reina_Donya_Maria = Carles_Cervera_Chaflan_Reina_Donya_Maria[c(1,12,2:11)]
+Carles_Cervera_Chaflan_Reina_Donya_Mariat = Carles_Cervera_Chaflan_Reina_Donya_Maria %>% gather(Ruido, Valor,8:length(Carles_Cervera_Chaflan_Reina_Donya_Maria)-1)
+
+Cuba_3 = Cuba_3[c(1,12,2:11)]
+Cuba_3t = Cuba_3 %>% gather(Ruido, Valor,8:length(Cuba_3)-1)
+
+Doctor_Serrano_21 = Doctor_Serrano_21[c(1,12,2:11)]
+Doctor_Serrano_21t = Doctor_Serrano_21 %>% gather(Ruido, Valor,8:length(Doctor_Serrano_21)-1)
+
+General_Prim_Chaflan_Donoso_Cortes = General_Prim_Chaflan_Donoso_Cortes[c(1,12,2:11)]
+General_Prim_Chaflan_Donoso_Cortest = General_Prim_Chaflan_Donoso_Cortes %>% gather(Ruido, Valor,8:length(General_Prim_Chaflan_Donoso_Cortes)-1)
+
+Puerto_Rico_21 = Puerto_Rico_21[c(1,12,2:11)]
+Puerto_Rico_21t = Puerto_Rico_21 %>% gather(Ruido, Valor,8:length(Puerto_Rico_21)-1)
+
+Salvador_Abril_Chaflan_Maestro_Jose_Serrano = Salvador_Abril_Chaflan_Maestro_Jose_Serrano[c(1,12,2:11)]
+Salvador_Abril_Chaflan_Maestro_Jose_Serranot = Salvador_Abril_Chaflan_Maestro_Jose_Serrano %>% gather(Ruido, Valor,8:length(Salvador_Abril_Chaflan_Maestro_Jose_Serrano)-1)
+
+Sueca_2 = Sueca_2[c(1,12,2:11)]
+Sueca_2t = Sueca_2 %>% gather(Ruido, Valor,8:length(Sueca_2)-1)
+
+Sueca_32 = Sueca_32[c(1,12,2:11)]
+Sueca_32t = Sueca_32 %>% gather(Ruido, Valor,8:length(Sueca_32)-1)
+
+Sueca_61 = Sueca_61[c(1,12,2:11)]
+Sueca_61t = Sueca_61 %>% gather(Ruido, Valor,8:length(Sueca_61)-1)
+
+Sueca_Esq_Denia = Sueca_Esq_Denia[c(1,12,2:11)]
+Sueca_Esq_Deniat = Sueca_Esq_Denia %>% gather(Ruido, Valor,8:length(Sueca_Esq_Denia)-1)
+
+Vivons_Chaflan_Cadiz = Vivons_Chaflan_Cadiz[c(1,12,2:11)]
+Vivons_Chaflan_Cadizt = Vivons_Chaflan_Cadiz %>% gather(Ruido, Valor,8:length(Vivons_Chaflan_Cadiz)-1)
+
 ```
 
 
