--- a/ProyectoTD2022.Rmd
+++ b/ProyectoTD2022.Rmd
@@ -254,5 +254,18 @@ Vivons_Chaflan_Cadizt = Vivons_Chaflan_Cadiz %>% gather(Ruido, Valor,8:length(Vi
 
 ```
 
+# Fusionamos todos los datos en un solo dataframe
 
+Fusionamos todos los dataframes para trabajar cómodamente con los datos.
+
+Después de fusionarlo, eliminamos las columnas prescindibles, estas son:
+- _id, que no aporta ninguna información
+- recvTime, que no aporta ninguna información
+- fiwareServicePath, que en todas las filas tiene el mismo valor (/sonometros)
+- entityType, que en todas las filas tiene el mismo valor (NoiseLevelObserved)
+
+```{r}
+df <- rbind(Cadiz_3t, Cadiz_16t, Carles_Cervera_34t, Carles_Cervera_Chaflan_Reina_Donya_Mariat, Cuba_3t, Doctor_Serrano_21t, General_Prim_Chaflan_Donoso_Cortest, Puerto_Rico_21t, Salvador_Abril_Chaflan_Maestro_Jose_Serranot, Sueca_2t, Sueca_32t, Sueca_61t, Sueca_Esq_Deniat, Vivons_Chaflan_Cadizt)
+
+```
 
