Descripcion de las variables

--- a/ProyectoTD2022.Rmd
+++ b/ProyectoTD2022.Rmd
@@ -273,5 +273,19 @@ df %>% filter(entityType != 'NoiseLevelObserved')
 
 # Las columnas _id, fiwareServicePath, recvTime y entityType no aportan información.
 dff <- df %>% select(-1, -fiwareServicePath, -entityType, -recvTime)
+
+str(dff)
+
+# Guardamos cada variable con el tipo de dato que le corresponde
+dff <- dff %>% mutate(Place = as.factor(Place), entityId = as.factor(entityId), dateObserved = as.POSIXlt(dateObserved), Ruido = as.factor(Ruido))
+
 ```
+
+Después de todos estos cambios, tenemos com resultado un dataset con las siguientes variables:
+
+**Place**, Lugar de medición
+**entityld**, Identificador único del sensor en la plataforma VLCi
+**dateObserved**, Día al que se refieren las medidas
+**Ruido**, Tipo de ruido que se mide
+**Valor**, Valor del ruido que se mide
 
